# bebl

./: .env.example  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
bebl/: config.py  db.py  main.py  models.py
bebl/routes/: comments.py  posts.py
migrations/versions/: 257b356a97d6_initial_revision.py  941b223b5505_initial_revision.py
tests/: conftest.py  test_comments.py  test_posts.py
