[tool.poetry]
name = "bebl"
version = "0.1.0"
description = "CyBEllum BLog engine - BEBL"
authors = ["Illia Sukonnik"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
flask = "^3.0.2"
flask-migrate = "^4.0.7"
flask-sqlalchemy = "^3.1.1"
flask-bcrypt = "^1.0.1"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
pre-commit = "^3.7.0"
pytest = "^8.1.1"
freezegun = "^1.4.0"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

lint.select=[
    "I",
]

[tool.black]
line-length = 100